--- a/audio-and-video-capture/getUserStream.html
+++ b/audio-and-video-capture/getUserStream.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>获取音视频流</title>
     <style>
       .flex {
         display: flex;
@@ -71,9 +71,7 @@
       } else {
         let constraints = {
           video: true,
-          audio: {
-            echoCancellation:true
-          },
+          audio: true,
         };
         navigator.mediaDevices
           .getUserMedia(constraints)
